added tag icons + update form
