# backend/src/swagger_output.json
@@ -169,6 +169,23 @@
         "responses": {}
       }
     },
+    "/transactions/{transactionId}": {
+      "get": {
+        "tags": [
+          "Transactions"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "transactionId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
+    },
     "/transactions/year/{year}": {
       "get": {
         "tags": [
